# open62541-arduino

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  arduino_opcua.cpp
cmake/Platform/: Arduino.cmake  size_script.py
src/: Gripper.cpp  Gripper.h  Nodeset.cpp  Nodeset.h  arduino_opcua.cpp
tools/OpenOCD/: featheresp32.cfg
tools/travis/: travis_linux_before_install.sh  travis_linux_script.sh
